<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <include layout="@layout/title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:textColor="@color/color_white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/id_et_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/http_url_1"
            android:textSize="12sp"
            android:focusable="false"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textColor="@color/color_white"
                    android:textSize="25sp"
                    android:text="@string/task_name"/>

                <EditText
                    android:id="@+id/task_http_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:layout_marginLeft="@dimen/dimen_1dp"
                    android:ems="10"
                    android:inputType="text">
                </EditText>
            </LinearLayout>

            <Button
                android:id="@+id/task_http_file_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/color_white"
                android:textSize="25sp"
                android:text="@string/click_add_file"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/task_http_file_names"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="#ff3399a9"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="25sp"
            android:text="@string/upload_progress"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">
            <ProgressBar
                android:id="@+id/task_http_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:progressTint="@color/color_black"
                android:max="100"
                android:progress="0"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/task_http_progress_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/zero"
                android:textColor="@color/color_white"
                android:textSize="25sp"         />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/color_white"
                android:textSize="25sp"
                android:text="@string/precent_symbol"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/color_white"
                android:textSize="25sp"
                android:text="@string/speed"/>
            <TextView
                android:id="@+id/task_http_progress_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/color_white"
                android:textSize="25sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/color_white"
                    android:textSize="25sp"
                    android:text="@string/upload_size"/>
                <TextView
                    android:id="@+id/task_http_progress_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/color_white"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:textSize="25sp"
                    android:text="@string/backslash_symbol" />

                <TextView
                    android:id="@+id/task_http_progress_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/color_white"
                    android:textSize="25sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/color_white"
                    android:textSize="25sp"
                    android:text="@string/upload_remain_time"/>
                <TextView
                    android:id="@+id/task_http_progress_remaintime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/color_white"
                    android:textSize="25sp"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="25sp"
            android:text="@string/upload_result"/>

        <TextView
            android:id="@+id/task_http_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/color_text_blue"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/task_http_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upload_task"
            android:textColor="@color/color_white"
            android:textSize="25sp"/>
        <Button
            android:id="@+id/task_http_reload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reload"
            android:textColor="@color/color_white"
            android:textSize="25sp"    />
        <Button
            android:id="@+id/task_http_delet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_task"
            android:textColor="@color/color_white"
            android:textSize="25sp" />
        <Button
            android:id="@+id/task_http_query"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/query_task"
            android:textColor="@color/color_white"
            android:textSize="25sp"     />
    </LinearLayout>

</LinearLayout>
