<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_5dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/multiupload"
        android:textSize="@dimen/dimen_24sp"
        android:textColor="@color/colorPrimary"
        tools:ignore="HardcodedText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/task_clond_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_1dp"
            android:ems="6"
            android:textSize="@dimen/dimen_15sp"
            android:inputType="text" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/type"
            android:textSize="@dimen/dimen_15sp" />

        <Spinner
            android:id="@+id/id_sp_type"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/task_clond_file_add"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_margin="5dp"
        android:text="@string/click_add_item"
        android:textSize="@dimen/dimen_10sp"
        android:textColor="@color/color_white"
        android:background="@color/color_green"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_list" />

    <ListView
        android:id="@+id/task_clond_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
